--- a/templates/converted.html
+++ b/templates/converted.html
@@ -4,7 +4,6 @@
     </head>
     <body>
         <h1>Binary Conversion</h1>
-        <h2>{{ binary_number }}</h2>
+        <h2>{{ binary_number.lstrip('0') }}</h2>
     </body>
-
 </html>
